<?xml version="1.0"?>
<package format="2">
  <name>ddos_msf_localizer</name>
  <version>1.1.1</version>
  <description>The Multi-sensor fusion localizer package</description>
  <maintainer email="N26112259@gs.ncku.edu.tw">Lin</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoware_config_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>autoware_can_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ublox_msgs</build_depend>
  <build_depend>novatel_gps_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>autoware_config_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>autoware_can_msgs</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>ublox_msgs</build_export_depend>
  <build_export_depend>novatel_gps_msgs</build_export_depend>
  <exec_depend>autoware_config_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>autoware_can_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>novatel_gps_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
